Update index.html. SEO wording added

--- a/index.html
+++ b/index.html
@@ -1,9 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<!-- added for SEO-->
+	
+<title>FIRE Calculator – Financial Independence & Retirement Tool</title>
+<meta name="description" content="Use the WalthModel FIRE calculator to project your wealth, plan early retirement, and understand your financial independence timeline.">
+
+<!-- Keywords (optional but fine) -->
+<meta name="keywords" content="FIRE calculator, financial independence calculator, wealth model, retirement tool, FIRE number, retirement savings projection">
+
+<!-- OpenGraph (for previews on LinkedIn / socials) -->
+<meta property="og:title" content="WalthModel – FIRE Calculator">
+<meta property="og:description" content="Project your wealth and plan your financial independence timeline.">
+<meta property="og:url" content="https://walthmodel.io">
+<meta property="og:type" content="website">
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>FIRE Model</title>
+  
 
   <!-- Chart.js -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
