Update index.html updated landing page

--- a/index.html
+++ b/index.html
@@ -906,11 +906,25 @@ html, body {
 
         </div>
 
-        <!-- RIGHT: Preview only -->
+<!-- RIGHT: Preview only -->
         
 
       </div>
     </div>
+
+    <!-- === SEO footer / About text (inside #tab-landing) === -->
+    <footer class="card" style="margin-top:18px;">
+      <h2 style="margin:0 0 8px 0;">About WealthModel</h2>
+      <p class="sub" style="line-height:1.55;">
+        WealthModel is a FIRE (Financial Independence, Retire Early) simulator that helps you model
+        income, expenses, superannuation, stock growth, and property cashflow to estimate your
+        projected FIRE age. Compare scenarios (rent vs buy, offset usage, PPOR vs investment),
+        view monthly/annual projections, and see when your plan becomes self‑funding via a clear
+        FIRE marker on the timeline. General information only — not financial advice.
+      </p>
+    </footer>
+    <!-- === End footer / About text === -->
+
   </div>
 </section>
 
