--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <meta name="keywords" content="FIRE calculator, financial independence calculator, wealth model, retirement tool, FIRE number, retirement savings projection">
 
 <!-- OpenGraph (for previews on LinkedIn / socials) -->
-<meta property="og:title" content="WalthModel – FIRE Calculator">
+<meta property="og:title" content="WealthModel – FIRE Calculator">
 <meta property="og:description" content="Project your wealth and plan your financial independence timeline.">
-<meta property="og:url" content="https://walthmodel.io">
+<meta property="og:url" content="https://wealthmodel.io">
 <meta property="og:type" content="website">
 
   <meta charset="UTF-8" />
