--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <!-- added for SEO-->
 	
 <title>FIRE Calculator – Financial Independence & Retirement Tool</title>
-<meta name="description" content="Use the WalthModel FIRE calculator to project your wealth, plan early retirement, and understand your financial independence timeline.">
+<meta name="description" content="Use the WealthModel FIRE calculator to project your wealth, plan early retirement, and understand your financial independence timeline.">
 
 <!-- Keywords (optional but fine) -->
 <meta name="keywords" content="FIRE calculator, financial independence calculator, wealth model, retirement tool, FIRE number, retirement savings projection">
@@ -18,7 +18,30 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   
-
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "SoftwareApplication",
+  "name": "WealthModel – FIRE Calculator",
+  "url": "https://wealthmodel.io/",
+  "applicationCategory": "FinanceApplication",
+  "operatingSystem": "Web",
+  "description": "WealthModel is a free FIRE (Financial Independence, Retire Early) calculator that models income, expenses, superannuation, property, and investments to project your FIRE age and wealth trajectory.",
+  "image": "https://wealthmodel.io/og.png",
+  "author": {
+    "@type": "Organization",
+    "name": "WealthModel"
+  },
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "AUD"
+  }
+}
+</script>
+	
+	<link rel="canonical" href="https://wealthmodel.io/">
+	
   <!-- Chart.js -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
