--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  
+
+<link rel="icon" type="image/png" sizes="32x32" href="https://wealthmodel.io/favicon.png">
+	
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
