Update index.html small change. still part of the big update

--- a/index.html
+++ b/index.html
@@ -1377,7 +1377,8 @@ html, body {
   </div>
 </section>
 
-</div><!-- /.wrap  ← ADD THIS LINE -
+</div><!-- /.wrap -->
+
 
 <!-- Slide-over Inputs Drawer (place OUTSIDE .wrap, BEFORE <script>) -->
 <div id="inputsDrawerBackdrop" class="drawer-backdrop" hidden></div>
